# cursorrules-mcp

./: .gitignore  LICENSE  MCP_IMPORT_GUIDE.md  README.md  cursorrules.yaml  project.md  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v20-05-25.pkl  document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
configs/: cursorrules.yaml
data/rules/examples/: academic_writing.yaml  python_scientific_computing.yaml  sample_markdown_rule.md  sample_yaml_rule.yaml
data/rules/imported/: cr_academic_template_001.yaml  cr_dom_ion_001.yaml  cr_dom_ion_002.yaml  cr_md_format_001.yaml
data/templates/: prompt_templates.md  prompt_templates.yaml
docs/: HTTP_SERVER_GUIDE.md  IMPORT_AND_STATISTICS_GUIDE.md  IMPORT_GUIDE.md  comprehensive-analysis.md  design-gemini.md  design-gpt4.md  design-grok.md  development_plan.md  implementation-plan.md  requirment.md  techs.html  techs.md
examples/: mcp-server-demo.py  sample-rules.json
scripts/: cursorrules_cli.py  migrate_database.py  start_http_server.py  start_mcp.py  test_complete_features.py
src/: __init__.py
src/cursorrules_mcp/: __init__.py  cli.py  config.py  database.py  engine.py  http_server.py  migration.py  models.py  rule_generator.py  rule_import.py  server.py  validators.py
